--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,59 @@
 ---
 ---
 
+@article{wilie2024belief,
+  title={Belief Revision: The Adaptability of Large Language Models Reasoning},
+  author={Wilie, Bryan and Cahyawijaya, Samuel and Ishii, Etsuko and He, Junxian and Fung, Pascale},
+  journal={arXiv preprint arXiv:2406.19764},
+  year={2024}
+}
+
+@article{ji2024llm,
+  title={LLM Internal States Reveal Hallucination Risk Faced With a Query},
+  author={Ji, Ziwei and Chen, Delong and Ishii, Etsuko and Cahyawijaya, Samuel and Bang, Yejin and Wilie, Bryan and Fung, Pascale},
+  journal={arXiv preprint arXiv:2407.03282},
+  year={2024}
+}
+
+@article{winata2024worldcuisines,
+  title={WORLDCUISINES: A Massive-Scale Benchmark for Multilingual and Multicultural Visual Question Answering on Global Cuisines},
+  author={Winata, Genta Indra and Hudi, Frederikus and Irawan, Patrick Amadeus and Anugraha, David and Putri, Rifki Afina and Wang, Yutong and Nohejl, Adam and Prathama, Ubaidillah Ariq and Ousidhoum, Nedjma and Amriani, Afifa and others},
+  journal={arXiv preprint arXiv:2410.12705},
+  year={2024}
+}
+
+@inproceedings{cahyawijaya-etal-2024-cendol,
+    title = "Cendol: Open Instruction-tuned Generative Large Language Models for {I}ndonesian Languages",
+    author = "Cahyawijaya, Samuel  and
+      Lovenia, Holy  and
+      Koto, Fajri  and
+      Putri, Rifki  and
+      Cenggoro, Wawan  and
+      Lee, Jhonson  and
+      Akbar, Salsabil  and
+      Dave, Emmanuel  and
+      Nuurshadieq, Nuurshadieq  and
+      Mahendra, Muhammad  and
+      Putri, Rr  and
+      Wilie, Bryan  and
+      Winata, Genta  and
+      Aji, Alham  and
+      Purwarianti, Ayu  and
+      Fung, Pascale",
+    editor = "Ku, Lun-Wei  and
+      Martins, Andre  and
+      Srikumar, Vivek",
+    booktitle = "Proceedings of the 62nd Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)",
+    month = aug,
+    year = "2024",
+    address = "Bangkok, Thailand",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2024.acl-long.796",
+    doi = "10.18653/v1/2024.acl-long.796",
+    pages = "14899--14914",
+    abstract = "Large language models (LLMs) show remarkable human-like capability in various domains and languages. To bridge this quality gap, we introduce Cendol, a collection of Indonesian LLMs encompassing both decoder-only and encoder-decoder architectures across a range of model sizes. We highlight Cendol{'}s effectiveness across a diverse array of tasks, attaining {\textasciitilde}20{\%} improvement, and demonstrate its capability to generalize to unseen tasks and indigenous languages of Indonesia. Furthermore, Cendol models showcase improved human favorability despite their limitations in capturing indigenous knowledge and cultural values in Indonesia. In addition, we discuss the shortcomings of parameter-efficient tunings, such as LoRA, for language adaptation. Alternatively, we propose the usage of vocabulary adaptation to enhance efficiency. Lastly, we evaluate the safety of Cendol and showcase that safety in pre-training in one language such as English is transferable to low-resource languages, such as Indonesian, even without RLHF and safety fine-tuning.",
+}
+
 @inproceedings{bang-etal-2023-multitask,
     title = "A Multitask, Multilingual, Multimodal Evaluation of {C}hat{GPT} on Reasoning, Hallucination, and Interactivity",
     author = "Bang, Yejin  and
