--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,7 +5,7 @@
     title="Belief Revision: The Adaptability of Large Language Models Reasoning",
     author="Wilie, Bryan and Cahyawijaya, Samuel and Ishii, Etsuko and He, Junxian and Fung, Pascale",
     journal="arXiv preprint arXiv:2406.19764",
-    selected="true",
+    selected={true},
     year="2024"
 }
 
