--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,7 +4,7 @@
 @inproceedings{wilie2024belief,
     title = {Belief Revision: The Adaptability of Large Language Models Reasoning},
     author = {Wilie, Bryan and Cahyawijaya, Samuel and Ishii, Etsuko and He, Junxian and Fung, Pascale},
-    booktitle = {To appear at the Proceedings of the 2024 Conference on Empirical Methods in Natural Language Processing},
+    booktitle = {Proceedings of the 2024 Conference on Empirical Methods in Natural Language Processing},
     month = nov,
     year = {2024},
     selected={true},
